clusters/52poke/default/nginx-media/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-media
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx-media
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-media
    spec:
      containers:
      - image: ghcr.io/52poke/52w-nginx:latest
        imagePullPolicy: Always
        name: nginx-media
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 256Mi
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: config-volume
          subPath: nginx.conf
        - mountPath: /var/cache/nginx
          name: nginx-media-cache
      volumes:
      - name: nginx-media
        configMap:
          name: nginx-media
      - name: config-volume
        emptyDir: {}
      - name: nginx-media-cache
        emptyDir: {}
