clusters/52poke/default/nginx-media/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-media
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-media
